# sitemap-urls-auditor

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
sitemap_urls_auditor/: __init__.py  base_exceptions.py
sitemap_urls_auditor/cli/: __init__.py  cmd_handlers.py  cmd_messages.py  cmd_validators.py  convert.py  init_app.py  stdout.py
sitemap_urls_auditor/logger/: __init__.py  main_logger.py
sitemap_urls_auditor/output/: __init__.py  save_json.py  stdout.py
sitemap_urls_auditor/sitemap/: __init__.py  dict_tools.py  exceptions.py  shortcuts.py  sitemap.py  types.py  url_collection.py  utils.py
