[tool.poetry]
name = "sitemap-urls-auditor"
version = "0.1.0"
description = ""
authors = ["Alena Konovalova <konovalova.alena@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
mypy = "^0.910"
flake8-isort = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
