[tool.poetry]
name = "sitemap-urls-auditor"
version = "0.1.0"
description = ""
authors = ["Alena Konovalova <konovalova.alena@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ultimate-sitemap-parser = "^0.5"
requests = "^2.26.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "3.9.2"
mypy = "^0.910"
wemake-python-styleguide = "^0.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
